# simple-cdg

./: .gitignore  README.md  compose.yaml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: chunker.py  client.py  db.py  embedding.py  main.py  models.py  opensearch.py  state.py
backend/app/resources/: bill.py
frontend/: .prettierrc  Dockerfile  README.md  components.json  package.json  svelte.config.js  vite.config.ts
frontend/drizzle/meta/: 0000_snapshot.json  _journal.json
frontend/src/: app.d.ts  hooks.server.ts
frontend/src/lib/: types.ts  utils.ts
frontend/src/lib/api/: bills.remote.ts  detailed-bill.remote.ts  detailed-bills.remote.ts  new-bills.remote.ts
frontend/src/lib/components/: app-sidebar.svelte  login-form.svelte  nav-main.svelte  nav-projects.svelte  nav-secondary.svelte  nav-user.svelte
frontend/src/lib/components/auth/: register-form.svelte
frontend/src/lib/components/bills/: bill-card.svelte  bill-detail-card.svelte
frontend/src/lib/components/tables/: bills-table.svelte  columns.ts  number-button.svelte
frontend/src/lib/server/: auth.ts
frontend/src/lib/server/db/: auth.schema.ts  schema.ts
frontend/src/lib/vitest-examples/: Welcome.svelte  Welcome.svelte.spec.ts  greet.spec.ts  greet.ts
frontend/src/routes/: +error.svelte  +layout.svelte  +page.svelte  layout.css
frontend/src/routes/auth/: +page.server.ts  +page.svelte
frontend/src/routes/auth/login/: +page.server.ts  +page.svelte
frontend/src/routes/auth/register/: +page.server.ts  +page.svelte
frontend/src/routes/bills/: +page.svelte
(+77 files in other folders)
